db_nw_policy_original.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: restrict-db-access
spec:
  podSelector:
    matchLabels:
      app: mongo-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: node-pod
    ports:
      - protocol: TCP
        port: 27017
  egress:
  - {} 
metadata:
  name: restrict-node-acess
spec:
  podSelector:
    matchLabels:
      app: node-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-pod
    ports:
      - protocol: TCP
        port: 3000
  egress:
  - {}
metadata:
  name: restrict-nginx-acess
spec:
  podSelector:
    matchLabels:
      app: frontend-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - protocol: TCP
        port: 80
  egress:
  - {}
